--- a/bulk/dos.ipynb
+++ b/bulk/dos.ipynb
@@ -94,6 +94,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e8a276fc2f4427bafc52a005e4ea704",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.0, description='hz', max=1.0, step=0.01), FloatSlider(value=0.0, des…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.integrate import quad\n",
+    "from ipywidgets import interactive\n",
+    "from IPython.display import display\n",
+    "\n",
+    "\n",
+    "def DOS(omega, Delta, hz, h0, eta, sigma):\n",
+    "    def integrand(phi):\n",
+    "        return np.imag( \n",
+    "            (omega + sigma * (hz + h0 * np.cos(2 * phi))) / np.sqrt(\n",
+    "        (1 - eta**2 * np.cos(2 * phi)**2)* Delta**2 - (omega + sigma * (hz + h0 * np.cos(2 * phi)))**2)\n",
+    "        )\n",
+    "    integral, abserr = quad(integrand, 0, 2 * np.pi, limit = 200)\n",
+    "    return integral\n",
+    "\n",
+    "def calculate_DOS(omega_ax, hz, h0, eta, Gamma):\n",
+    "    dos_func = lambda omega: 1/(4 * np.pi) * (\n",
+    "        DOS(omega + Gamma*1j, 1, hz, h0, eta, +1)\n",
+    "        + DOS(omega + Gamma*1j, 1, hz, h0, eta, -1)\n",
+    "        )\n",
+    "    dos_values = [dos_func(omega_val) for omega_val in omega_ax]\n",
+    "    return np.array(dos_values)\n",
+    "\n",
+    "def plot_DOS(hz, h0, eta, Gamma):\n",
+    "    omega_ax = np.linspace(-4, 4, 501)\n",
+    "    dos = calculate_DOS(omega_ax, hz, h0, eta, Gamma)\n",
+    "    \n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    plt.plot(omega_ax, dos)\n",
+    "    plt.xlabel(r'$\\omega$')\n",
+    "    plt.ylabel(r'$n(\\omega)$')\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
+    "\n",
+    "# Use interactive to create sliders automatically\n",
+    "interactive_plot = interactive(plot_DOS, \n",
+    "                               hz=(0, 1, 0.01),\n",
+    "                               h0=(0, 1, 0.01), \n",
+    "                               eta=(0, 1, 0.01), \n",
+    "                               Gamma=(0.0001, 0.005, 0.0001))\n",
+    "\n",
+    "# Display interactive plot\n",
+    "display(interactive_plot)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
