--- a/bulk/dos.ipynb
+++ b/bulk/dos.ipynb
@@ -27,42 +27,53 @@
     "from ipywidgets import interactive\n",
     "from IPython.display import display\n",
     "\n",
+    "\n",
     "def DOS(omega, Delta, h0, eta, sigma):\n",
     "    def integrand(phi):\n",
-    "        return np.imag( \n",
-    "            (omega + sigma * h0 * np.cos(2 * phi)) / np.sqrt(\n",
-    "        (1 - eta**2 * np.cos(2 * phi)**2)* Delta**2 - (omega + sigma * h0 * np.cos(2 * phi))**2)\n",
+    "        return np.imag(\n",
+    "            (omega + sigma * h0 * np.cos(2 * phi))\n",
+    "            / np.sqrt(\n",
+    "                (1 - eta**2 * np.cos(2 * phi) ** 2) * Delta**2\n",
+    "                - (omega + sigma * h0 * np.cos(2 * phi)) ** 2\n",
+    "            )\n",
     "        )\n",
-    "    integral, abserr = quad(integrand, 0, 2 * np.pi, limit = 200)\n",
+    "\n",
+    "    integral, abserr = quad(integrand, 0, 2 * np.pi, limit=200)\n",
     "    return integral\n",
     "\n",
+    "\n",
     "def calculate_DOS(omega_ax, h, eta, Gamma):\n",
-    "    dos_func = lambda omega: 1/(4 * np.pi) * (\n",
-    "        DOS(omega + Gamma*1j, 1, h, eta, +1)\n",
-    "        + DOS(omega + Gamma*1j, 1, h, eta, -1)\n",
+    "    dos_func = (\n",
+    "        lambda omega: 1\n",
+    "        / (4 * np.pi)\n",
+    "        * (\n",
+    "            DOS(omega + Gamma * 1j, 1, h, eta, +1)\n",
+    "            + DOS(omega + Gamma * 1j, 1, h, eta, -1)\n",
     "        )\n",
+    "    )\n",
     "    dos_values = [dos_func(omega_val) for omega_val in omega_ax]\n",
     "    return np.array(dos_values)\n",
+    "\n",
     "\n",
     "def plot_DOS(h0, eta, Gamma):\n",
     "    omega_ax = np.linspace(-4, 4, 501)\n",
     "    dos = calculate_DOS(omega_ax, h0, eta, Gamma)\n",
-    "    \n",
+    "\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    plt.plot(omega_ax, dos)\n",
-    "    plt.xlabel(r'$\\omega$')\n",
-    "    plt.ylabel(r'$n(\\omega)$')\n",
+    "    plt.xlabel(r\"$\\omega$\")\n",
+    "    plt.ylabel(r\"$n(\\omega)$\")\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
+    "\n",
     "# Use interactive to create sliders automatically\n",
-    "interactive_plot = interactive(plot_DOS, \n",
-    "                               h0=(0, 1, 0.01), \n",
-    "                               eta=(0, 1, 0.01), \n",
-    "                               Gamma=(0.0001, 0.005, 0.0001))\n",
+    "interactive_plot = interactive(\n",
+    "    plot_DOS, h0=(0, 1, 0.01), eta=(0, 1, 0.01), Gamma=(0.0001, 0.005, 0.0001)\n",
+    ")\n",
     "\n",
     "# Display interactive plot\n",
-    "display(interactive_plot)\n"
+    "display(interactive_plot)"
    ]
   },
   {
@@ -86,8 +97,8 @@
     "\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "ax.fill_betweenx(omega_ax, dos*0, dos)\n",
-    "ax.hlines([1, 0.75, 1.25], 0, 3, colors='black')\n",
+    "ax.fill_betweenx(omega_ax, dos * 0, dos)\n",
+    "ax.hlines([1, 0.75, 1.25], 0, 3, colors=\"black\")\n",
     "ax.set_ylim(-2, 2)\n",
     "fig.savefig(\"dos.svg\")"
    ]
@@ -122,49 +133,55 @@
     "\n",
     "def DOS(omega, Delta, hz, h0, eta, sigma):\n",
     "    def integrand(phi):\n",
-    "        return np.imag( \n",
-    "            (omega + sigma * (hz + h0 * np.cos(2 * phi))) / np.sqrt(\n",
-    "        (1 - eta**2 * np.cos(2 * phi)**2)* Delta**2 - (omega + sigma * (hz + h0 * np.cos(2 * phi)))**2)\n",
+    "        return np.imag(\n",
+    "            (omega + sigma * (hz + h0 * np.cos(2 * phi)))\n",
+    "            / np.sqrt(\n",
+    "                (1 - eta**2 * np.cos(2 * phi) ** 2) * Delta**2\n",
+    "                - (omega + sigma * (hz + h0 * np.cos(2 * phi))) ** 2\n",
+    "            )\n",
     "        )\n",
-    "    integral, abserr = quad(integrand, 0, 2 * np.pi, limit = 200)\n",
+    "\n",
+    "    integral, abserr = quad(integrand, 0, 2 * np.pi, limit=200)\n",
     "    return integral\n",
     "\n",
+    "\n",
     "def calculate_DOS(omega_ax, hz, h0, eta, Gamma):\n",
-    "    dos_func = lambda omega: 1/(4 * np.pi) * (\n",
-    "        DOS(omega + Gamma*1j, 1, hz, h0, eta, +1)\n",
-    "        + DOS(omega + Gamma*1j, 1, hz, h0, eta, -1)\n",
+    "    dos_func = (\n",
+    "        lambda omega: 1\n",
+    "        / (4 * np.pi)\n",
+    "        * (\n",
+    "            DOS(omega + Gamma * 1j, 1, hz, h0, eta, +1)\n",
+    "            + DOS(omega + Gamma * 1j, 1, hz, h0, eta, -1)\n",
     "        )\n",
+    "    )\n",
     "    dos_values = [dos_func(omega_val) for omega_val in omega_ax]\n",
     "    return np.array(dos_values)\n",
+    "\n",
     "\n",
     "def plot_DOS(hz, h0, eta, Gamma):\n",
     "    omega_ax = np.linspace(-4, 4, 501)\n",
     "    dos = calculate_DOS(omega_ax, hz, h0, eta, Gamma)\n",
-    "    \n",
+    "\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    plt.plot(omega_ax, dos)\n",
-    "    plt.xlabel(r'$\\omega$')\n",
-    "    plt.ylabel(r'$n(\\omega)$')\n",
+    "    plt.xlabel(r\"$\\omega$\")\n",
+    "    plt.ylabel(r\"$n(\\omega)$\")\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
+    "\n",
     "# Use interactive to create sliders automatically\n",
-    "interactive_plot = interactive(plot_DOS, \n",
-    "                               hz=(0, 1, 0.01),\n",
-    "                               h0=(0, 1, 0.01), \n",
-    "                               eta=(0, 1, 0.01), \n",
-    "                               Gamma=(0.0001, 0.005, 0.0001))\n",
+    "interactive_plot = interactive(\n",
+    "    plot_DOS,\n",
+    "    hz=(0, 1, 0.01),\n",
+    "    h0=(0, 1, 0.01),\n",
+    "    eta=(0, 1, 0.01),\n",
+    "    Gamma=(0.0001, 0.005, 0.0001),\n",
+    ")\n",
     "\n",
     "# Display interactive plot\n",
-    "display(interactive_plot)\n"
+    "display(interactive_plot)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
