--- a/old_versions/amvortex_handmade.ipynb
+++ b/old_versions/amvortex_handmade.ipynb
@@ -15,8 +15,9 @@
     "import scipy.sparse as sp\n",
     "from typing import Tuple, Union\n",
     "from numpy.typing import ArrayLike\n",
-    "#import cupy as cp\n",
-    "#import cupy.sparse as scp\n",
+    "\n",
+    "# import cupy as cp\n",
+    "# import cupy.sparse as scp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import scipy.linalg as la\n",
@@ -27,6 +28,7 @@
     "\n",
     "from colorsys import hls_to_rgb\n",
     "\n",
+    "\n",
     "def colorize(z):\n",
     "    n, m = z.shape\n",
     "    c = np.zeros((n, m, 3))\n",
@@ -36,7 +38,7 @@
     "    idx = ~(np.isinf(z) + np.isnan(z))\n",
     "    phase = (np.angle(z[idx]) + np.pi) / (2 * np.pi)\n",
     "    phase = (phase + 0.5) % 1.0\n",
-    "    amplitude = 1.0 - 1.0 / (1.0 + abs(z[idx])**0.3)\n",
+    "    amplitude = 1.0 - 1.0 / (1.0 + abs(z[idx]) ** 0.3)\n",
     "    color = [hls_to_rgb(p, a, 0.8) for p, a in zip(phase, amplitude)]\n",
     "    c[idx] = color\n",
     "    return c"
@@ -88,7 +90,15 @@
    },
    "outputs": [],
    "source": [
-    "def generate_grid_and_operators(Nx: int, Ny: int) -> Tuple[ArrayLike, ArrayLike, ArrayLike, sp.csr_matrix, sp.csr_matrix, sp.csr_matrix, sp.csr_matrix]:\n",
+    "def generate_grid_and_operators(Nx: int, Ny: int) -> Tuple[\n",
+    "    ArrayLike,\n",
+    "    ArrayLike,\n",
+    "    ArrayLike,\n",
+    "    sp.csr_matrix,\n",
+    "    sp.csr_matrix,\n",
+    "    sp.csr_matrix,\n",
+    "    sp.csr_matrix,\n",
+    "]:\n",
     "    \"\"\"\n",
     "    Generate grids, differential operators, and Laplacian operators for a tight-binding simulation.\n",
     "\n",
@@ -107,24 +117,35 @@
     "            - Lx (scipy.sparse.csr_matrix): Laplacian operator along the x-axis.\n",
     "            - Ly (scipy.sparse.csr_matrix): Laplacian operator along the y-axis.\n",
     "    \"\"\"\n",
-    "    x_ax = np.linspace(-(Nx//2), Nx//2, Nx)\n",
-    "    y_ax = np.linspace(-(Ny//2),  Ny//2, Ny)\n",
+    "    x_ax = np.linspace(-(Nx // 2), Nx // 2, Nx)\n",
+    "    y_ax = np.linspace(-(Ny // 2), Ny // 2, Ny)\n",
     "    x, y = np.meshgrid(x_ax, y_ax)\n",
     "    r = np.sqrt(x**2 + y**2)\n",
     "    theta = np.arctan2(y, x)\n",
     "\n",
     "    # Calculate x and y differential operators\n",
-    "    _Dx = sp.diags([+1*np.ones(Nx-1), -1*np.ones(Nx-1)], [+1, -1], format='csr') / 2\n",
+    "    _Dx = (\n",
+    "        sp.diags([+1 * np.ones(Nx - 1), -1 * np.ones(Nx - 1)], [+1, -1], format=\"csr\")\n",
+    "        / 2\n",
+    "    )\n",
     "    Dx = sp.kron(sp.eye(Ny), _Dx)\n",
     "\n",
-    "    _Dy = sp.diags([+1*np.ones(Ny-1), -1*np.ones(Ny-1)], [+1, -1]) / 2\n",
+    "    _Dy = sp.diags([+1 * np.ones(Ny - 1), -1 * np.ones(Ny - 1)], [+1, -1]) / 2\n",
     "    Dy = sp.kron(_Dy, sp.eye(Nx))\n",
     "\n",
     "    # Calculate x and y Laplacian operators\n",
-    "    _Lx = sp.diags([+1*np.ones(Nx-1), -2*np.ones(Nx), +1*np.ones(Nx-1)], [+1, 0, -1], format='csr')\n",
+    "    _Lx = sp.diags(\n",
+    "        [+1 * np.ones(Nx - 1), -2 * np.ones(Nx), +1 * np.ones(Nx - 1)],\n",
+    "        [+1, 0, -1],\n",
+    "        format=\"csr\",\n",
+    "    )\n",
     "    Lx = sp.kron(sp.eye(Ny), _Lx)\n",
     "\n",
-    "    _Ly = sp.diags([+1*np.ones(Ny-1), -2*np.ones(Ny), +1*np.ones(Ny-1)], [+1, 0, -1], format='csr')\n",
+    "    _Ly = sp.diags(\n",
+    "        [+1 * np.ones(Ny - 1), -2 * np.ones(Ny), +1 * np.ones(Ny - 1)],\n",
+    "        [+1, 0, -1],\n",
+    "        format=\"csr\",\n",
+    "    )\n",
     "    Ly = sp.kron(_Ly, sp.eye(Nx))\n",
     "\n",
     "    return x, y, r, theta, Dx, Dy, Lx, Ly"
@@ -139,7 +160,9 @@
    },
    "outputs": [],
    "source": [
-    "def generate_hamiltonian(Nx: int, Ny: int, t: float, t_am: float, mu: float) -> sp.csr_matrix:\n",
+    "def generate_hamiltonian(\n",
+    "    Nx: int, Ny: int, t: float, t_am: float, mu: float\n",
+    ") -> sp.csr_matrix:\n",
     "    \"\"\"\n",
     "    Generate the Hamiltonian for a tight-binding simulation.\n",
     "\n",
@@ -158,21 +181,22 @@
     "    \"\"\"\n",
     "    x, y, r, theta, Dx, Dy, Lx, Ly = generate_grid_and_operators(Nx, Ny)\n",
     "\n",
-    "    Delta = (1 - np.exp(-r/5))\n",
+    "    Delta = 1 - np.exp(-r / 5)\n",
     "    phi = theta\n",
     "    # Kinetic energy part\n",
     "    H_n = -t * (Ly + Lx)\n",
     "    H_n += -mu * sp.eye(Nx * Ny)\n",
     "\n",
     "    # Superconductor\n",
-    "    H_s = (sp.kron(sp.diags(Delta.flatten() * np.cos(theta).flatten()), txs0) + \n",
-    "           sp.kron(sp.diags(Delta.flatten() * np.sin(theta).flatten()), -tys0))\n",
+    "    H_s = sp.kron(sp.diags(Delta.flatten() * np.cos(theta).flatten()), txs0) + sp.kron(\n",
+    "        sp.diags(Delta.flatten() * np.sin(theta).flatten()), -tys0\n",
+    "    )\n",
     "\n",
     "    # Antiferromagnet\n",
     "    H_m = -t_am * (Ly - Lx)\n",
     "\n",
     "    # Create the full Hamiltonian\n",
-    "    H = sp.kron(H_n, tzs0) + sp.kron(H_m, t0sz) + H_s   \n",
+    "    H = sp.kron(H_n, tzs0) + sp.kron(H_m, t0sz) + H_s\n",
     "\n",
     "    return H"
    ]
@@ -191,32 +215,37 @@
     "    lat = kwant.lattice.square(a=1, norbs=4)\n",
     "    syst = kwant.Builder()\n",
     "\n",
-    "    \n",
     "    def circle(pos):\n",
     "        (x, y) = pos\n",
-    "        r = x ** 2 + y ** 2\n",
-    "        return r < (51 ** 2)\n",
-    "    \n",
+    "        r = x**2 + y**2\n",
+    "        return r < (51**2)\n",
+    "\n",
     "    def square(pos):\n",
     "        (x, y) = pos\n",
-    "        return (abs(x)<101)*(abs(y)<101)\n",
-    "    \n",
+    "        return (abs(x) < 101) * (abs(y) < 101)\n",
+    "\n",
     "    def onsite(site1):\n",
     "        (x, y) = site1.pos\n",
-    "        return ((mu + 4 * t) * tzs0\n",
-    "                  + (1 - np.exp(-np.sqrt(x**2+y**2)/5)) * np.cos(np.arctan2(y, x)) * (+txs0)\n",
-    "                  + (1 - np.exp(-np.sqrt(x**2+y**2)/5)) * np.sin(np.arctan2(y, x)) * (-tys0))\n",
+    "        return (\n",
+    "            (mu + 4 * t) * tzs0\n",
+    "            + (1 - np.exp(-np.sqrt(x**2 + y**2) / 5))\n",
+    "            * np.cos(np.arctan2(y, x))\n",
+    "            * (+txs0)\n",
+    "            + (1 - np.exp(-np.sqrt(x**2 + y**2) / 5))\n",
+    "            * np.sin(np.arctan2(y, x))\n",
+    "            * (-tys0)\n",
+    "        )\n",
     "\n",
     "    def hopx(site1, site2):\n",
     "        return -t * tzs0 + t_am * t0sz\n",
-    "    \n",
+    "\n",
     "    def hopy(site1, site2):\n",
     "        return -t * tzs0 - t_am * t0sz\n",
-    "    \n",
+    "\n",
     "    syst[lat.shape(circle, (0, 0))] = onsite\n",
     "    syst[kwant.builder.HoppingKind((1, 0), lat, lat)] = hopx\n",
     "    syst[kwant.builder.HoppingKind((0, 1), lat, lat)] = hopy\n",
-    "    \n",
+    "\n",
     "    hamiltonian = syst.finalized().hamiltonian_submatrix(sparse=True)\n",
     "    return hamiltonian"
    ]
@@ -234,7 +263,7 @@
     "Ny = 201\n",
     "t = 10\n",
     "t_am = 0.1\n",
-    "mu = 0#2 * t\n",
+    "mu = 0  # 2 * t\n",
     "\n",
     "H1 = generate_hamiltonian(Nx, Ny, t, t_am, mu)\n",
     "H2 = generate_hamiltonian2(Nx, Ny, t, t_am, mu)"
@@ -303,9 +332,11 @@
     "import pylab as plt\n",
     "\n",
     "# Plot the array \"A\" using colorize\n",
-    "plt.imshow(colorize(Delta*np.exp(1j*phi)), interpolation='none', extent=(-5, 5, -5, 5))\n",
-    "plt.title('Complex Function')\n",
-    "plt.colorbar(label='Amplitude')\n",
+    "plt.imshow(\n",
+    "    colorize(Delta * np.exp(1j * phi)), interpolation=\"none\", extent=(-5, 5, -5, 5)\n",
+    ")\n",
+    "plt.title(\"Complex Function\")\n",
+    "plt.colorbar(label=\"Amplitude\")\n",
     "plt.show()"
    ]
   },
@@ -349,8 +380,8 @@
    "outputs": [],
    "source": [
     "sort_idxs = np.argsort(ws)\n",
-    "ws=ws[sort_idxs]\n",
-    "vs=vs[:, sort_idxs]"
+    "ws = ws[sort_idxs]\n",
+    "vs = vs[:, sort_idxs]"
    ]
   },
   {
@@ -388,7 +419,7 @@
    "source": [
     "idx = np.argmin(abs(ws))\n",
     "v = vs[:, idx]\n",
-    "v_r = v.reshape(Ny, Nx, 4, order='C')"
+    "v_r = v.reshape(Ny, Nx, 4, order=\"C\")"
    ]
   },
   {
@@ -422,8 +453,8 @@
    ],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "im = ax.contourf(x, y, (np.abs(v_r[:])**2).sum(axis=-1), levels=100)\n",
-    "#plt.contour(x, y, np.abs(Delta)**2, levels=5, colors='w')\n",
+    "im = ax.contourf(x, y, (np.abs(v_r[:]) ** 2).sum(axis=-1), levels=100)\n",
+    "# plt.contour(x, y, np.abs(Delta)**2, levels=5, colors='w')\n",
     "fig.colorbar(im)"
    ]
   },
@@ -481,8 +512,10 @@
     }
    ],
    "source": [
-    "plt.contourf(x, y, (np.abs(v_r[..., (Ny*Nx*4)//2+1])**2).sum(axis=-1), levels=100)\n",
-    "plt.contour(x, y, np.abs(Delta)**2, levels=5, colors='w')\n",
+    "plt.contourf(\n",
+    "    x, y, (np.abs(v_r[..., (Ny * Nx * 4) // 2 + 1]) ** 2).sum(axis=-1), levels=100\n",
+    ")\n",
+    "plt.contour(x, y, np.abs(Delta) ** 2, levels=5, colors=\"w\")\n",
     "plt.colorbar()"
    ]
   },
@@ -507,8 +540,8 @@
     }
    ],
    "source": [
-    "v0 = v[..., (Ny*Nx*4)//2]\n",
-    "v0_r = v0.reshape(Ny*Nx, 4)"
+    "v0 = v[..., (Ny * Nx * 4) // 2]\n",
+    "v0_r = v0.reshape(Ny * Nx, 4)"
    ]
   },
   {
@@ -582,7 +615,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    x, y, r, theta, Dx, Dy, Lx, Ly = generate_grid_and_operators(Nx, Ny)\n"
+    "x, y, r, theta, Dx, Dy, Lx, Ly = generate_grid_and_operators(Nx, Ny)"
    ]
   },
   {
@@ -612,7 +645,7 @@
     }
    ],
    "source": [
-    "(Dx@Dx).tocsc()[:8, :8].toarray()"
+    "(Dx @ Dx).tocsc()[:8, :8].toarray()"
    ]
   },
   {
