--- a/old_versions/amvortex_kwant.ipynb
+++ b/old_versions/amvortex_kwant.ipynb
@@ -31,7 +31,7 @@
     "    idx = ~(np.isinf(z) + np.isnan(z))\n",
     "    phase = (np.angle(z[idx]) + np.pi) / (2 * np.pi)\n",
     "    phase = (phase + 0.5) % 1.0\n",
-    "    amplitude = 1.0 - 1.0 / (1.0 + abs(z[idx])**0.3)\n",
+    "    amplitude = 1.0 - 1.0 / (1.0 + abs(z[idx]) ** 0.3)\n",
     "    color = [hls_to_rgb(p, a, 0.8) for p, a in zip(phase, amplitude)]\n",
     "    c[idx] = color\n",
     "    return c"
@@ -90,33 +90,30 @@
     "\n",
     "    def square(pos):\n",
     "        (x, y) = pos\n",
-    "        return (abs(x)<=Nx)*(abs(y)<=Ny)\n",
-    "    \n",
+    "        return (abs(x) <= Nx) * (abs(y) <= Ny)\n",
+    "\n",
     "    def onsite(site1):\n",
     "        (x, y) = site1.pos\n",
-    "        return (\n",
-    "            (4 * t - mu) * tzs0 \n",
-    "            - hz * t0sz\n",
-    "            + txs0 )\n",
-    "                 # + (1 - np.exp(-np.sqrt(x**2+y**2)/5)) * np.cos(np.arctan2(y, x)) * (+txs0)\n",
-    "                 # + (1 - np.exp(-np.sqrt(x**2+y**2)/5)) * np.sin(np.arctan2(y, x)) * (-tys0))\n",
+    "        return (4 * t - mu) * tzs0 - hz * t0sz + txs0\n",
+    "        # + (1 - np.exp(-np.sqrt(x**2+y**2)/5)) * np.cos(np.arctan2(y, x)) * (+txs0)\n",
+    "        # + (1 - np.exp(-np.sqrt(x**2+y**2)/5)) * np.sin(np.arctan2(y, x)) * (-tys0))\n",
     "\n",
     "    def hopx(site1, site2):\n",
     "        return -t * tzs0 + t_am * t0sz\n",
-    "    \n",
+    "\n",
     "    def hopy(site1, site2):\n",
     "        return -t * tzs0 - t_am * t0sz\n",
-    "    \n",
+    "\n",
     "    syst[lat.shape(square, (0, 0))] = onsite\n",
     "    syst[kwant.builder.HoppingKind((1, 0), lat, lat)] = hopx\n",
     "    syst[kwant.builder.HoppingKind((0, 1), lat, lat)] = hopy\n",
-    "    \n",
-    "    if(periodic_bc):\n",
-    "        for i in range(-Ny, Ny+1):\n",
+    "\n",
+    "    if periodic_bc:\n",
+    "        for i in range(-Ny, Ny + 1):\n",
     "            syst[lat(Nx, i), lat(-Nx, i)] = hopx\n",
-    "            \n",
-    "        for i in range(-Nx, Nx+1):\n",
-    "             syst[lat(i, Ny), lat(i, -Ny)] = hopy\n",
+    "\n",
+    "        for i in range(-Nx, Nx + 1):\n",
+    "            syst[lat(i, Ny), lat(i, -Ny)] = hopy\n",
     "\n",
     "    return lat, syst.finalized()"
    ]
@@ -211,7 +208,9 @@
    "outputs": [],
    "source": [
     "kwant_op = kwant.operator.Density(fsyst, onsite=txs0, sum=False)\n",
-    "spectrum = kwant.kpm.SpectralDensity(fsyst, rng=0, energy_resolution=0.1, operator=kwant_op)"
+    "spectrum = kwant.kpm.SpectralDensity(\n",
+    "    fsyst, rng=0, energy_resolution=0.1, operator=kwant_op\n",
+    ")"
    ]
   },
   {
@@ -274,10 +273,10 @@
    "source": [
     "# Sort eigensystem by energy\n",
     "sort_idxs = np.argsort(ws)\n",
-    "ws=ws[sort_idxs]\n",
-    "vs=vs[:, sort_idxs]\n",
+    "ws = ws[sort_idxs]\n",
+    "vs = vs[:, sort_idxs]\n",
     "\n",
-    "idx = len(ws)//2 "
+    "idx = len(ws) // 2"
    ]
   },
   {
@@ -311,7 +310,7 @@
    },
    "outputs": [],
    "source": [
-    "vvv =  vs.reshape(-1, 4, len(ws))\n",
+    "vvv = vs.reshape(-1, 4, len(ws))\n",
     "cc = np.einsum(\"ijn, ikn -> ijkn\", vvv[:, :2], vvv[:, 2:].conj())"
    ]
   },
@@ -350,8 +349,8 @@
    "source": [
     "# Sort eigensystem by energy\n",
     "sort_idxs = np.argsort(ws)\n",
-    "ws=ws[sort_idxs]\n",
-    "vs=vs[:, sort_idxs]"
+    "ws = ws[sort_idxs]\n",
+    "vs = vs[:, sort_idxs]"
    ]
   },
   {
@@ -431,8 +430,10 @@
    "source": [
     "fig, (ax1, ax2, ax3) = plt.subplots(ncols=3)\n",
     "\n",
-    "im1 = kwant.plotter.density(systf, d_n, ax=ax1, colorbar=True, cmap=\"Reds\", vmin=0,  vmax=abs(d_n).max());\n",
-    "im2 = kwant.plotter.density(systf, d_q, ax=ax2, colorbar=True, cmap=\"RdBu\");\n",
+    "im1 = kwant.plotter.density(\n",
+    "    systf, d_n, ax=ax1, colorbar=True, cmap=\"Reds\", vmin=0, vmax=abs(d_n).max()\n",
+    ")\n",
+    "im2 = kwant.plotter.density(systf, d_q, ax=ax2, colorbar=True, cmap=\"RdBu\")\n",
     "im3 = kwant.plotter.density(systf, d_s, ax=ax3, colorbar=True, cmap=\"RdBu\");"
    ]
   },
@@ -486,9 +487,15 @@
    "source": [
     "fig, (ax1, ax2, ax3) = plt.subplots(ncols=3)\n",
     "\n",
-    "im1 = kwant.plotter.current(systf, j_n, ax=ax1, colorbar=True, min_linewidth=0.1, max_linewidth=2);\n",
-    "im2 = kwant.plotter.current(systf, j_q, ax=ax2, colorbar=True, min_linewidth=0.1, max_linewidth=2);\n",
-    "im3 = kwant.plotter.current(systf, j_s, ax=ax3, colorbar=True, min_linewidth=0.1, max_linewidth=2);\n",
+    "im1 = kwant.plotter.current(\n",
+    "    systf, j_n, ax=ax1, colorbar=True, min_linewidth=0.1, max_linewidth=2\n",
+    ")\n",
+    "im2 = kwant.plotter.current(\n",
+    "    systf, j_q, ax=ax2, colorbar=True, min_linewidth=0.1, max_linewidth=2\n",
+    ")\n",
+    "im3 = kwant.plotter.current(\n",
+    "    systf, j_s, ax=ax3, colorbar=True, min_linewidth=0.1, max_linewidth=2\n",
+    ")\n",
     "\n",
     "ax1.set_xlim(-35, 35)\n",
     "ax1.set_ylim(-35, 35)\n",
