Recovered deleted file + sketch code

--- a/tightbinding/Fig2-single_impurity.ipynb
+++ b/tightbinding/Fig2-single_impurity.ipynb
@@ -530,6 +530,7 @@
     "\n",
     "from matplotlib import cm\n",
     "\n",
+    "\n",
     "def multiplot(x, ys, cs, ax=None, **kwargs):\n",
     "    \"\"\"\n",
     "    Plot multiple lines with smoothly changing colors.\n",
@@ -559,7 +560,6 @@
     "        x.shape[0] == ys.shape[0]\n",
     "    ), \"x and ys must have the same length in the first dimension.\"\n",
     "\n",
-    "    \n",
     "    assert (\n",
     "        ys.shape[:2] == cs.shape[:2] and cs.shape[2] == 4\n",
     "    ), \"ys must have shape (x_N, y_N) and cs must have shape (x_N, y_N, 4).\"\n",
@@ -668,8 +668,8 @@
     }
    ],
    "source": [
-    "#P_so = 31\n",
-    "#hzs_so = np.linspace(-0.38, 0.38, P_so) + 1e-6\n",
+    "# P_so = 31\n",
+    "# hzs_so = np.linspace(-0.38, 0.38, P_so) + 1e-6\n",
     "\n",
     "P_so = 21\n",
     "hzs_so = np.linspace(0, 0.38, P_so) + 1e-6\n",
@@ -945,7 +945,7 @@
     "    t_so=0.0,\n",
     "    t_am=t_am,\n",
     "    V=V,\n",
-    "    Delta=Delta,    \n",
+    "    Delta=Delta,\n",
     "    theta=theta,\n",
     "    hx=hx,\n",
     "    hy=hy,\n",
@@ -1133,8 +1133,8 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(2, 2))\n",
     "ax.matshow(Hp - np.diag(np.diag(Hp)))\n",
-    "ax.hlines([6-0.5, 10-0.5], -0.5, 15.5, linestyles=\"dashed\", colors=\"k\")\n",
-    "ax.vlines([6-0.5, 10-0.5], -0.5, 15.5, linestyles=\"dashed\", colors=\"k\")"
+    "ax.hlines([6 - 0.5, 10 - 0.5], -0.5, 15.5, linestyles=\"dashed\", colors=\"k\")\n",
+    "ax.vlines([6 - 0.5, 10 - 0.5], -0.5, 15.5, linestyles=\"dashed\", colors=\"k\")"
    ]
   }
  ],
