--- a/tightbinding/Fig3-order_parameter.ipynb
+++ b/tightbinding/Fig3-order_parameter.ipynb
@@ -30,7 +30,7 @@
     "from tqdm.notebook import tqdm\n",
     "from pauli import *\n",
     "from qm_tools import sort_eigensystem\n",
-    "from qm_tools import  sparse_diag\n",
+    "from qm_tools import sparse_diag\n",
     "from scipy.interpolate import RegularGridInterpolator"
    ]
   },
@@ -106,10 +106,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Delta_ns = np.zeros((NVs, Nx*Ny)) * np.nan\n",
-    "theta_ns = np.zeros((NVs, Nx*Ny))  * np.nan\n",
+    "Delta_ns = np.zeros((NVs, Nx * Ny)) * np.nan\n",
+    "theta_ns = np.zeros((NVs, Nx * Ny)) * np.nan\n",
     "wss = np.zeros((NVs, Nl)) * np.nan\n",
-    "vss = np.zeros((NVs, 4*Nx*Ny, Nl), dtype=complex)  * np.nan"
+    "vss = np.zeros((NVs, 4 * Nx * Ny, Nl), dtype=complex) * np.nan"
    ]
   },
   {
@@ -176,22 +176,22 @@
    ],
    "source": [
     "for i, Vs in tqdm(enumerate(Vss), total=len(Vss)):\n",
-    "  print(f\"V = {-Vs}\")\n",
-    "  # Load the .npz file\n",
-    "  try:\n",
-    "    file_path = f\"./data/data_V{int(Vss[i]*10):03d}.npz\"\n",
-    "    data = np.load(file_path)\n",
+    "    print(f\"V = {-Vs}\")\n",
+    "    # Load the .npz file\n",
+    "    try:\n",
+    "        file_path = f\"./data/data_V{int(Vss[i]*10):03d}.npz\"\n",
+    "        data = np.load(file_path)\n",
     "\n",
-    "    central_start = (N - Nl) // 2\n",
-    "    central_end = central_start + Nl\n",
+    "        central_start = (N - Nl) // 2\n",
+    "        central_end = central_start + Nl\n",
     "\n",
-    "    # Extract the arrays from the file\n",
-    "    Delta_ns[i] = data['Delta']\n",
-    "    theta_ns[i] = data['theta']\n",
-    "    vss[i] = data['vs'][:, central_start:central_end]\n",
-    "    wss[i] = data['ws'][central_start:central_end]\n",
-    "  except:\n",
-    "    pass"
+    "        # Extract the arrays from the file\n",
+    "        Delta_ns[i] = data[\"Delta\"]\n",
+    "        theta_ns[i] = data[\"theta\"]\n",
+    "        vss[i] = data[\"vs\"][:, central_start:central_end]\n",
+    "        wss[i] = data[\"ws\"][central_start:central_end]\n",
+    "    except:\n",
+    "        pass"
    ]
   },
   {
@@ -205,45 +205,6 @@
     "\n",
     "Delta_n = Delta_ns[idxp].reshape(Nx, Ny)\n",
     "theta_n = theta_ns[idxp].reshape(Nx, Ny)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "99050882",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('spline36',\n",
-       " 'none',\n",
-       " 'spline16',\n",
-       " 'antialiased',\n",
-       " 'nearest',\n",
-       " 'bilinear',\n",
-       " 'hanning',\n",
-       " 'mitchell',\n",
-       " 'bicubic',\n",
-       " 'bessel',\n",
-       " 'hermite',\n",
-       " 'sinc',\n",
-       " 'catrom',\n",
-       " 'blackman',\n",
-       " 'kaiser',\n",
-       " 'hamming',\n",
-       " 'quadric',\n",
-       " 'gaussian',\n",
-       " 'lanczos')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    " 'spline36', 'none', 'spline16', 'antialiased', 'nearest', 'bilinear', 'hanning', 'mitchell', 'bicubic', 'bessel', 'hermite', 'sinc', 'catrom', 'blackman', 'kaiser', 'hamming', 'quadric', 'gaussian', 'lanczos'"
    ]
   },
   {
@@ -269,7 +230,7 @@
     "complex_plot(\n",
     "    x,\n",
     "    y,\n",
-    "    Delta_n * np.exp(1j *theta_n),\n",
+    "    Delta_n * np.exp(1j * theta_n),\n",
     "    ax=ax,\n",
     "    interpolation=\"spline16\",\n",
     ")\n",
@@ -309,8 +270,8 @@
     }
    ],
    "source": [
-    "fig, ax1  = plt.subplots(nrows=1, figsize=(2, 1.0))\n",
-    "ax1.plot(x_ax, np.real(Delta_n[Ny//2]*np.exp(1j*theta_n[Ny//2])), \".-C0\")\n",
+    "fig, ax1 = plt.subplots(nrows=1, figsize=(2, 1.0))\n",
+    "ax1.plot(x_ax, np.real(Delta_n[Ny // 2] * np.exp(1j * theta_n[Ny // 2])), \".-C0\")\n",
     "ax1.hlines(0, -60, 60, color=\"black\", linestyles=\"dashed\")\n",
     "\n",
     "\n",
@@ -361,11 +322,11 @@
     "linecolors = mpl.cm.tab10(ri)\n",
     "\n",
     "for i in range(Nl):\n",
-    "    ax.plot(Vss, wso[:, i], color=linecolors[i], marker='')\n",
+    "    ax.plot(Vss, wso[:, i], color=linecolors[i], marker=\"\")\n",
     "\n",
     "\n",
-    "ax.plot(Vss, Delta_init - mu * t_am / t - 0*abs(Vss), \"-.\", color=\"green\")\n",
-    "ax.plot(Vss, -Delta_init + mu * t_am / t + 0*abs(Vss), \"-.\", color=\"green\")\n",
+    "ax.plot(Vss, Delta_init - mu * t_am / t - 0 * abs(Vss), \"-.\", color=\"green\")\n",
+    "ax.plot(Vss, -Delta_init + mu * t_am / t + 0 * abs(Vss), \"-.\", color=\"green\")\n",
     "\n",
     "ax.set_xticks([10, 15, 20, 25], labels=[\"10\", \"\", \"20\", \"\"])\n",
     "ax.set_yticks([-0.3, 0, 0.3], labels=[\"-0.3\", \"\", \"0.3\"])\n",
