Preparing for release

--- a/tightbinding/Fig3-order_parameter.ipynb
+++ b/tightbinding/Fig3-order_parameter.ipynb
@@ -202,11 +202,17 @@
    "outputs": [],
    "source": [
     "idxp = np.argmin(abs(Vss - 14))\n",
-    "Delta1 = Delta_ns[idxp].reshape(Nx, Ny) * np.exp(1j * theta_ns[idxp].reshape(Nx, Ny)).real\n",
+    "Delta1 = (\n",
+    "    Delta_ns[idxp].reshape(Nx, Ny) * np.exp(1j * theta_ns[idxp].reshape(Nx, Ny)).real\n",
+    ")\n",
     "idxp = np.argmin(abs(Vss - 15.5))\n",
-    "Delta2 = Delta_ns[idxp].reshape(Nx, Ny) * np.exp(1j * theta_ns[idxp].reshape(Nx, Ny)).real\n",
+    "Delta2 = (\n",
+    "    Delta_ns[idxp].reshape(Nx, Ny) * np.exp(1j * theta_ns[idxp].reshape(Nx, Ny)).real\n",
+    ")\n",
     "idxp = np.argmin(abs(Vss - 19))\n",
-    "Delta3 = Delta_ns[idxp].reshape(Nx, Ny) * np.exp(1j * theta_ns[idxp].reshape(Nx, Ny)).real"
+    "Delta3 = (\n",
+    "    Delta_ns[idxp].reshape(Nx, Ny) * np.exp(1j * theta_ns[idxp].reshape(Nx, Ny)).real\n",
+    ")"
    ]
   },
   {
@@ -227,11 +233,19 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2, ax3) = plt.subplots(figsize=(3.2, 0.9), ncols=3, sharex=True, sharey=True)\n",
+    "fig, (ax1, ax2, ax3) = plt.subplots(\n",
+    "    figsize=(3.2, 0.9), ncols=3, sharex=True, sharey=True\n",
+    ")\n",
     "\n",
-    "im1 = ax1.contourf(x, y, Delta1, cmap=\"RdBu\", levels=101, norm=mpl.colors.CenteredNorm(0, 1.2))\n",
-    "im2 = ax2.contourf(x, y, Delta2, cmap=\"RdBu\", levels=101, norm=mpl.colors.CenteredNorm(0, 1.2))\n",
-    "im3 = ax3.contourf(x, y, Delta3, cmap=\"RdBu\", levels=101, norm=mpl.colors.CenteredNorm(0, 1.2))\n",
+    "im1 = ax1.contourf(\n",
+    "    x, y, Delta1, cmap=\"RdBu\", levels=101, norm=mpl.colors.CenteredNorm(0, 1.2)\n",
+    ")\n",
+    "im2 = ax2.contourf(\n",
+    "    x, y, Delta2, cmap=\"RdBu\", levels=101, norm=mpl.colors.CenteredNorm(0, 1.2)\n",
+    ")\n",
+    "im3 = ax3.contourf(\n",
+    "    x, y, Delta3, cmap=\"RdBu\", levels=101, norm=mpl.colors.CenteredNorm(0, 1.2)\n",
+    ")\n",
     "\n",
     "ax2.set_xticks([-10, 0, 10], labels=[\"-10\", \"\", \"10\"])\n",
     "ax2.set_yticks([-10, 0, 10], labels=[\"-10\", \"\", \"10\"])\n",
@@ -254,9 +268,9 @@
     "\n",
     "fig.tight_layout(pad=0)\n",
     "\n",
-    "cbar = fig.colorbar(im3, ax = [ax1, ax2, ax3], pad=0.02)\n",
+    "cbar = fig.colorbar(im3, ax=[ax1, ax2, ax3], pad=0.02)\n",
     "cbar.set_ticks([-1, +1], labels=[\"-1\", \"+1\"])\n",
-    "cbar.ax.tick_params(axis='both', which='both', length=2, direction=\"out\")\n",
+    "cbar.ax.tick_params(axis=\"both\", which=\"both\", length=2, direction=\"out\")\n",
     "cbar.set_label(r\"$\\Delta_0'$\", labelpad=-8)\n",
     "\n",
     "fig.savefig(\"./imgs/Fig3-Delta.svg\", dpi=600, bbox_inches=\"tight\")"
